--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Unfold - Personal Portfolio & CV Template</title>
+<title>Sagnik-About ME</title>
 
-<link rel="shortcut icon" href="https://preview.uideck.com/items/unfold/assets/images/favicon.png" type="image/png">
+<link rel="shortcut icon" href="" type="image/png">
 
 <link rel="stylesheet" href="https://preview.uideck.com/items/unfold/assets/css/bootstrap.min.css">
 
@@ -61,7 +61,6 @@
 <ul class="navbar-nav ml-auto">
 <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
 <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-<li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
 <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
 </ul>
 </div> 
@@ -151,7 +150,7 @@
 <div class="row">
 <div class="col-lg-6">
 <div class="about-content mt-50">
-<h5 class="about-title">Hi There! I'm Mark Parker</h5>
+<h5 class="about-title">Hi There! I'm Sagnik Sahoo</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 <ul class="clearfix">
 <li>
