--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul class="navbar-nav ml-auto">
 <li class="nav-item active"><a class="page-scroll" href="#home">Home</a></li>
 <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-<li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
+
 </ul>
 </div> 
 </nav> 
@@ -123,10 +123,11 @@
 <div class="col-lg-12">
 <div class="header-social-icon">
 <ul>
-<li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+<li><a href="#"><i class="icon-google-plus"></i></a></li>
 <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-<li><a href="#"><i class="lni-behance-original"></i></a></li>
-<li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+<li><a href="#"><i class="icon-github"></i></a></li>
+ <li><a href="#"><i class="icon-youtube-play"></a></i> 
+ 
 </ul>
 </div> 
 </div>
@@ -143,7 +144,7 @@
 <div class="col-lg-8">
 <div class="section-title text-center">
 <h2 class="title">About Me</h2>
-<p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+<p></p>
 </div> 
 </div>
 </div> 
@@ -151,7 +152,7 @@
 <div class="col-lg-6">
 <div class="about-content mt-50">
 <h5 class="about-title">Hi There! I'm Sagnik Sahoo</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>Iam a new borned devloper who is just learning the languanges and aquired the skills</p>
 <ul class="clearfix">
 <li>
 <div class="single-info d-flex align-items-center">
@@ -159,7 +160,7 @@
 <i class="lni-calendar"></i>
 </div>
 <div class="info-text">
-<p><span>Date of birth:</span> 8 June 1995</p>
+<p><span>Date of birth:</span> 9 April 2005</p>
 </div>
 </div> 
 </li>
@@ -169,7 +170,7 @@
 <i class="lni-envelope"></i>
 </div>
 <div class="info-text">
-<p><span>Email:</span> parker@mysite.com</p>
+<p><span>Email:</span> sagniksahoo50gmail.com</p>
 </div>
 </div> 
 </li>
@@ -179,7 +180,7 @@
 <i class="lni-phone-handset"></i>
 </div>
 <div class="info-text">
-<p><span>Phone:</span> +1-202-555-0138</p>
+<p><span>Phone:</span> +000000000000</p>
 </div>
 </div> 
 </li>
@@ -268,120 +269,18 @@
 </div> 
 </section>
 
-
-
-
-
-<section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover" style="background-image: url(https://preview.uideck.com/items/unfold/assets/images/call-to-action.jpg)">
-<div class="container">
-<div class="row justify-content-center">
-<div class="col-xl-8 col-lg-9">
-<div class="call-action-content text-center">
-<h2 class="action-title">Have any project on mind?</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua nostrud.</p>
-<ul>
-<li><a class="main-btn custom" href="#">download cv</a></li>
-<li><a class="main-btn custom-2" href="#">hire me</a></li>
-</ul>
-</div> 
-</div>
-</div> 
-</div> 
-</section>
-
-<section id="contact" class="contact-area pt-125 pb-130 gray-bg">
-<div class="container">
-<div class="row justify-content-center">
-<div class="col-lg-8">
-<div class="section-title text-center pb-25">
-<h2 class="title">Get In Touch</h2>
-<p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
-</div> 
-</div>
-</div> 
-<div class="row justify-content-center">
-<div class="col-lg-4 col-md-6 col-sm-7">
-<div class="contact-box text-center mt-30">
-<div class="contact-icon">
-<i class="lni-map-marker"></i>
-</div>
-<div class="contact-content">
-<h6 class="contact-title">Address</h6>
-<p>123 Stree New York City , United States Of America 750</p>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-md-6 col-sm-7">
-<div class="contact-box text-center mt-30">
-<div class="contact-icon">
-<i class="lni-phone"></i>
-</div>
-<div class="contact-content">
-<h6 class="contact-title">Phone</h6>
-<p>+931 2222 5555</p>
- <p>+547 5554 6663</p>
-</div>
-</div> 
-</div>
-<div class="col-lg-4 col-md-6 col-sm-7">
-<div class="contact-box text-center mt-30">
-<div class="contact-icon">
-<i class="lni-envelope"></i>
-</div>
-<div class="contact-content">
-<h6 class="contact-title">Email</h6>
-<p>support@yourmail.com</p>
-<p>info@helpline.com</p>
-</div>
-</div> 
-</div>
-</div> 
-<div class="row">
-<div class="col-lg-6">
-<div class="contact-form pt-30">
-<form id="contact-form" action="https://preview.uideck.com/items/unfold/assets/contact.php">
-<div class="single-form">
-<input type="text" name="name" placeholder="Name">
-</div> 
-<div class="single-form">
-<input type="email" name="email" placeholder="Email">
-</div> 
-<div class="single-form">
-<textarea name="message" placeholder="Message"></textarea>
-</div> 
-<p class="form-message"></p>
-<div class="single-form">
-<button class="main-btn" type="submit">Send Message</button>
-</div> 
-</form>
-</div> 
-</div>
-<div class="col-lg-6">
-<div class="contact-map mt-60">
-<div class="gmap_canvas">
-<iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-</div>
-</div> 
-</div>
-</div> 
-</div> 
-</section>
-
-
 <footer id="footer" class="footer-area">
 <div class="footer-widget pt-130 pb-130">
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-lg-8">
 <div class="footer-content text-center">
-<a href="https://preview.uideck.com/items/unfold/index.html">
-<img src="https://preview.uideck.com/items/unfold/assets/images/logo-2.png" alt="Logo">
-</a>
-<p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+<p class="mt-">Thank YOU for visiting my site .Want to Contact Me?</p>
 <ul>
-<li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-<li><a href="#"><i class="lni-twitter-original"></i></a></li>
-<li><a href="#"><i class="lni-pinterest"></i></a></li>
+<li><a href="#"><i class="icon-youtube-play"></i> </a></li>
+<li><a href="#"><i class="icon-google-plus"></i>></a></li>
+<li><a href="#"><i class="icon-github"></i></a></li>
 <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
 </ul>
 </div> 
@@ -394,7 +293,7 @@
 <div class="row">
 <div class="col-lg-12">
 <div class="copyright-text text-center pt-20">
-<p>Copyright © 2022. All rights reserved by You!</p>
+<p>Copyright © 2020. All rights reserved by Sagnik!</p>
 </div> 
 </div>
 </div> 
