--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 <i class="lni-map-marker"></i>
 </div>
 <div class="info-text">
-<p><span>Location:</span> 4373, El Centro, CA</p>
+<p><span>Location:</span> Haldia 721607,West Bengal ,INDIA</p>
 </div>
 </div> 
 </li>
