--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </div>
 <div class="col-lg-6 offset-xl-1">
 <div class="header-image d-none d-lg-block">
-<img src="https://preview.uideck.com/items/unfold/assets/images/banner/hero.png" alt="hero">
+<img src="https://github.com/choco-code/Sagnik/blob/master/OBJECTS.svg" alt="hero">
 </div> 
 </div>
 </div> 
